# stock-report-website-main

./: README.md  package-lock.json
backend/: pyproject.toml
backend/backend/: main.py  models.py  schemas.py
frontend/: package-lock.json  package.json
shadcn-starter-copy/: package.json  pnpm-lock.yaml
shadcn-starter-copy/app/: layout.tsx  page.tsx
shadcn-starter-copy/app/history/: page.tsx
shadcn-starter-copy/app/report/: page.tsx
shadcn-starter-copy/components/: loadingCharts.tsx  menuComponent.tsx  scollReportsDemo.tsx  sheetDemo.tsx  stockReportForm.tsx  toastDemo.tsx
